# windowed-mode-mouse-fix

./: CMakeLists.txt  LICENSE  README.md  dinput8.h  exports.def  main.cpp  makefile
